hphp/hack/test/pocket_universes/typing/dep2.bad.php.exp
File "dep2.bad.php", line 27, characters 13-16:
Invalid argument (Typing[4110])
File "dep2.bad.php", line 11, characters 16-18:
Expected `int`
File "dep2.bad.php", line 27, characters 13-16:
But got `string`
